[tool.poetry]
name = "streamlit-sortables"
version = "0.3.1"
description = "A Streamlit component to provide sortable list."
license = "MIT"
authors = ["ohtaman <ohtamans@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/ohtaman/streamlit-sortables"
keywords = ["streamlit", "sortable", "list"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
exclude = ["streamlit_sortables/frontend/**/*"]
include = ["streamlit_sortables/frontend/build/**/*"]

[tool.poetry.dependencies]
python = "!=3.9.7,>=3.9"
streamlit = ">=1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
